fix: overflow

--- a/src/pages/MyDay/style.scss
+++ b/src/pages/MyDay/style.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     overflow-y: scroll;
     width: 100%;
+    height: 90%;
 
     .title {
         margin: 2vw;
