--- a/src/pages/Tasks/style.scss
+++ b/src/pages/Tasks/style.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     overflow-y: hidden;
     overflow-x: hidden;
-    height: 100%;
+    height: 100vh;
 
     .SideBar-wrapper {
         height: 100%;
